# sdk-python

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
src/nexus_rpc/: __init__.py
src/nexusrpc/: __init__.py  _common.py  _serializer.py  _service.py  _service_definition.py  _types.py  _util.py  contract.py  handler.py  interface.py
src/nexusrpc/_handler/: _common.py  _core.py  _decorators.py  _util.py
src/nexusrpc/_syncio/: __init__.py  _serializer.py
src/nexusrpc/asyncio/: __init__.py  _serializer.py  handler.py
tests/: helpers.py  test_common.py  test_get_input_and_output_types.py  test_handler_interface_implementation.py  test_handler_operation_definitions.py  test_handler_operation_factories.py  test_handler_service_handlers.py  test_handler_service_name.py  test_type_checking.py  test_type_checking_sync_operation.py  test_type_errors.py  test_util.py
tests/contract/: test_service_decorator_creates_expected_operation_declaration.py  test_service_decorator_selects_correct_service_name.py
tests/handler/: test_async_operation.py  test_cancellation.py  test_forward_references.py  test_handler_sync.py  test_handler_syncio.py  test_handler_validates_service_handler_collection.py  test_interceptors.py  test_invalid_usage.py  test_middleware.py  test_operation_handler_runtime_behavior.py  test_request_routing.py  test_service_handler_decorator_collects_expected_operation_definitions.py  test_service_handler_decorator_requirements.py  test_service_handler_decorator_results_in_correctly_functioning_operation_factories.py  test_service_handler_decorator_selects_correct_service_name.py  test_service_handler_decorator_validates_against_service_contract.py  test_service_handler_decorator_validates_duplicate_operation_names.py  test_service_handler_from_user_instance.py  test_sync_operation_handler_decorator_creates_valid_operation_handler.py
tests/service_definition/: test_service_decorator_creates_expected_operation_declaration.py  test_service_decorator_selects_correct_service_name.py  test_service_decorator_validation.py  test_service_definition_inheritance.py
(+20 files in other folders)
