[project]
name = "nexus-rpc"
version = "0.1.0"
description = "Nexus Python SDK"
readme = "README.md"
authors = [
    { name = "Dan Davison", email = "dandavison7@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pydoctor>=25.4.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-pretty>=1.3.0",
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexusrpc"]

[tool.pyright]
include = ["src", "tests"]

[tool.ruff]
target-version = "py39"

