[project]
name = "nexus-rpc"
version = "0.1.0"
description = "Nexus Python SDK"
readme = "README.md"
authors = [
    { name = "Temporal Technologies", email = "sdk@temporal.io" }
]
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pydoctor>=25.4.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-pretty>=1.3.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexusrpc"]

[tool.pyright]
include = ["src", "tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pydoctor]
docformat = "google"
